--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Snow White Christmas</title>
 </head>
 <body>
+<h1>Merry Christmas</h1>
+<div id="result">
+    <h1>Merry Christmas</h1>
+</div>
 
+<script src="SnowFlake.js"></script>
 </body>
 </html>
